# freddi

./: .buildconfig  .gitignore  build.sh  com.example.Freddi.yml  license.md  meson.build  readme.md  run.sh
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/summaries/: 75935152e872fca1e8ffec04a985cc8e893f11331c50838a8484e37173348955-b5f04c3177716d239a4f3aca1ff4662d85d4d5ffddeefa2f73d9ee7b0885fac6.delta  891791905971aa46a7af22c4937dbac70165fd54f468e1310323953b1db816d6-b5f04c3177716d239a4f3aca1ff4662d85d4d5ffddeefa2f73d9ee7b0885fac6.delta  d503721e641f862f3e6893472d71e4a570ab8f40c7bb5f985375247d6f47cc40-b5f04c3177716d239a4f3aca1ff4662d85d4d5ffddeefa2f73d9ee7b0885fac6.delta  dd5ebbfed4754f420b8d261679447192c61114ad6e11af3bfeb155533a20bd11-b5f04c3177716d239a4f3aca1ff4662d85d4d5ffddeefa2f73d9ee7b0885fac6.delta  fc97e979fdf1d67b97e22b9dc62f77bbed82f9b4ffc52cf0af80419e090d7c8b-b5f04c3177716d239a4f3aca1ff4662d85d4d5ffddeefa2f73d9ee7b0885fac6.delta
.flatpak-builder/checksums/: x86_64-com.example.Freddi.json  x86_64-com.example.Freddi.yml
.flatpak-builder/git/file_home_yitz_Documents_Development_Builder_freddi/: FETCH_HEAD  config
data/: com.example.Freddi.appdata.xml.in  com.example.Freddi.desktop.in  com.example.Freddi.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: freddi-application.c  freddi-application.h  freddi-window.c  freddi-window.glade  freddi-window.glade~  freddi-window.h  freddi-window.ui  freddi.gresource.xml  main.c  meson.build
temp/: metadata.debuginfo
temp/files/: manifest.json
(+9 files in other folders)
